@@ -4,3 +4,4 @@ Makefile.PL
 lib/CGI/Screen.pm
 eg/screen
 README
+test.pl
